<resources>
  <string name="id_1030_minutes">~ 10-30 Minutes</string>
  <string name="id_12_confirmations">1/2 confirmations</string>
  <string name="id_12_months_51840_blocks">12 months (51840 blocks)</string>
  <string name="id_12_words">12 words</string>
  <string name="id_15_months_65535_blocks">15 months (65535 blocks)</string>
  <string name="id_1_double_check_all_of_your">1. Double check all of your recovery phrase word by word, are all words correct?\n2. The order of words is important! Make sure you\'ve typed the words in the correct order.\n\nIf neither of these tips have helped you, or if you don\'t have a 12, 24 or 27 words recovery phrase please check our help center.</string>
  <string name="id_1d_2s_ago">%1$d %2$s ago</string>
  <string name="id_1d_minutes">%1$d minutes</string>
  <string name="id_1s_blocks_left_2d">%1$s blocks left %2$d</string>
  <string name="id_1s_twofactor_setup">%1$s Two-Factor setup</string>
  <string name="id_24_words">24 words</string>
  <string name="id_2_hours">~ 2 Hours</string>
  <string name="id_2fa_call_is_now_enabled">2FA Call is now enabled</string>
  <string name="id_2fa_dispute_in_progress">2FA Dispute in Progress</string>
  <string name="id_2fa_expired">2FA Expired</string>
  <string name="id_2fa_expiry">2FA Expiry</string>
  <string name="id_2fa_isnt_set_up_yetnnyou_can">2FA isn\'t set up yet.\n\nYou can choose your favourite 2FA method among an authenticator app, email, SMS or a call.</string>
  <string name="id_2fa_methods">2FA Methods</string>
  <string name="id_2fa_protected">2FA Protected</string>
  <string name="id_2fa_reset_in_progress">2FA Reset in Progress</string>
  <string name="id_2fa_shield">2FA Shield</string>
  <string name="id_2fa_shield_account">2FA Shield Account</string>
  <string name="id_2fa_threshold">2FA Threshold</string>
  <string name="id_2of2">2of2</string>
  <string name="id_2of3">2of3</string>
  <string name="id_2of3_account">2of3 Account</string>
  <string name="id_2of3_with_2fa">2of3 with 2FA</string>
  <string name="id_2of3_with_2fa_shield">2of3 with 2FA Shield</string>
  <string name="id_4_hours">~ 4 Hours</string>
  <string name="id_5_seconds_minimum">5 seconds minimum</string>
  <string name="id_6_months_25920_blocks">6 months (25920 blocks)</string>
  <string name="id_a_2of3_account_requires_two_out">A 2of3 account requires two out of three signatures to spend coins. The third signature is from a backup key known only to you. This gives you the security benefits of a standard account, while still allowing you to move your coins independently at any point in time.</string>
  <string name="id_a_funding_fee_of_s_is_applied">A funding fee of %s is applied when receiving amounts above your current receive capacity of %s</string>
  <string name="id_a_funding_fee_of_s_minimum_s_is">A funding fee of %s (minimum %s) is applied when receiving amounts above your current receive capacity of %s</string>
  <string name="id_a_funding_fee_of_s_s_is_applied">A funding fee of %s (%s) is applied when receiving amounts above your current receive capacity %s (%s)</string>
  <string name="id_a_new_transaction_has_just">A new transaction has just arrived in your wallet.</string>
  <string name="id_a_newer_version_of_blockstream">A newer version of Blockstream Green is now available</string>
  <string name="id_a_powerful_hardware_wallet_for">A powerful hardware wallet for securing your Bitcoin.</string>
  <string name="id_a_screen_lock_must_be_enabled">A screen lock must be enabled from Android settings</string>
  <string name="id_a_set_up_funding_fee_of_s_s">A set up funding fee of %s (%s) will be applied to the received amount.</string>
  <string name="id_a_wallet_is_detected_on_this">A wallet is detected on this device:</string>
  <string name="id_about">About</string>
  <string name="id_accept">Accept</string>
  <string name="id_access">Access</string>
  <string name="id_account">Account</string>
  <string name="id_account__asset">Account &amp; Asset</string>
  <string name="id_account_address">Account Address</string>
  <string name="id_account_archived">Account archived</string>
  <string name="id_account_balance">Account Balance</string>
  <string name="id_account_extended_public_keys">Account Extended Public Keys</string>
  <string name="id_account_for_special_assets">Account for special assets, monitored or authorized by the asset issuer.</string>
  <string name="id_account_has_been_archived">Account has been archived</string>
  <string name="id_account_has_been_removed">Account has been removed</string>
  <string name="id_account_id">Account ID</string>
  <string name="id_account_name">Account Name</string>
  <string name="id_account_transfer">Account Transfer</string>
  <string name="id_account_type">Account Type</string>
  <string name="id_accounts">Accounts</string>
  <string name="id_accounts_summary">Accounts summary</string>
  <string name="id_action_canceled">Action canceled</string>
  <string name="id_actions">Actions</string>
  <string name="id_add_2fa_account">Add 2FA Account</string>
  <string name="id_add_a_note_only_you_can_see_it">Add a note (only you can see it).</string>
  <string name="id_add_a_pgp_public_key_to_receive">Add a PGP public key to receive encrypted email and keep your privacy</string>
  <string name="id_add_amount">Add Amount</string>
  <string name="id_add_amount_optional">Add amount (optional)</string>
  <string name="id_add_an_amp_wallet">Add an AMP wallet</string>
  <string name="id_add_another_wallet">Add another wallet</string>
  <string name="id_add_custom_network_by_qr_code">Add custom network by QR Code</string>
  <string name="id_add_custom_network_by_url">Add custom network by URL</string>
  <string name="id_add_lightning_shortcut">Add lightning shortcut</string>
  <string name="id_add_new_account">Add New Account</string>
  <string name="id_add_note">Add Note</string>
  <string name="id_add_recipient">Add Recipient</string>
  <string name="id_add_wallet">Add Wallet</string>
  <string name="id_added_already">Added Already!</string>
  <string name="id_adding_a_2fa">adding a 2FA</string>
  <string name="id_additional_networks">Additional Networks</string>
  <string name="id_additional_security">Additional Security</string>
  <string name="id_address">Address</string>
  <string name="id_address_1s">Address: %1$s</string>
  <string name="id_address_copied_to_clipboard">Address copied to clipboard</string>
  <string name="id_address_to_receive">Address to Receive</string>
  <string name="id_address_type">Address Type</string>
  <string name="id_address_verified">Address verified!</string>
  <string name="id_address_was_filled_by_a_payment">Address was filled by a Payment URI</string>
  <string name="id_addresses">Addresses</string>
  <string name="id_advanced">Advanced</string>
  <string name="id_advanced_network_settings">Advanced network settings</string>
  <string name="id_advanced_options">Advanced options</string>
  <string name="id_advanced_options_for_your_third">Advanced options for your third recovery key</string>
  <string name="id_all">All</string>
  <string name="id_all_assets">All Assets</string>
  <string name="id_all_coins">(All coins)</string>
  <string name="id_all_networks">All networks</string>
  <string name="id_all_of_the_accounts_in_your">All of the accounts in your wallet need to be empty before deleting it.</string>
  <string name="id_all_the_coins_received_or">All the coins received or created as change.</string>
  <string name="id_all_wallets">All wallets</string>
  <string name="id_allow_collection">Allow collection</string>
  <string name="id_allow_data_collection">Allow data collection</string>
  <string name="id_allow_nondefault_connection">Allow Non-Default Connection</string>
  <string name="id_allows_you_to_quickly_check">Allows you to quickly check your balance, receive funds or sweep a paper wallet. You can\'t send funds in watch-only mode.</string>
  <string name="id_always">Always</string>
  <string name="id_always_ask">Always ask</string>
  <string name="id_amount">Amount</string>
  <string name="id_amount_above_maximum_allowed">Amount above maximum allowed value</string>
  <string name="id_amount_below_minimum_allowed">Amount below minimum allowed value</string>
  <string name="id_amount_below_the_dust_threshold">Amount below the dust threshold</string>
  <string name="id_app_settings">App Settings</string>
  <string name="id_archive_account">Archive account</string>
  <string name="id_as_easy_as_snapping_a_photo">As easy as snapping a photo with your phone. If you have an existing wallet, scan your recovery phrase from settings.</string>
  <string name="id_bip39_passphrase_login">BIP39 Passphrase login</string>
  <string name="id_blockstream_green_needs_access">Blockstream Green needs access to Bluetooth in order to connect to hardware wallets. Location data is not used or kept by Blockstream.</string>
  <string name="id_cancel">Cancel</string>
  <string name="id_connect_through_a_proxy">Connect through a proxy</string>
  <string name="id_connect_with_tor">Connect with Tor</string>
  <string name="id_description">Description</string>
  <string name="id_email">Email</string>
  <string name="id_enable_bluetooth">Enable Bluetooth</string>
  <string name="id_enable_location_services">Enable location services</string>
  <string name="id_enhance_security">Enhance Security</string>
  <string name="id_enter_your_recovery_phrase">Enter your recovery phrase</string>
  <string name="id_feedback">Feedback</string>
  <string name="id_give_bluetooth_permissions">Give Bluetooth Permissions</string>
  <string name="id_got_it_written_down_great_you">Got it written down? Great. You can enter it here. Don\'t lose it, it\'ll stay the same.</string>
  <string name="id_help">Help</string>
  <string name="id_import_a_wallet_created_on">Import a wallet created on Blockstream Green.</string>
  <string name="id_import_a_wallet_created_with">Import a wallet created with other apps. This option only works with singlesig wallets using BIP39 mnemonics, and following the BIP44, BIP49, or BIP84 derivations.</string>
  <string name="id_just_a_few_more_steps_to_get">Just a few more steps to get you set up.</string>
  <string name="id_list_of_addresses">List of Addresses</string>
  <string name="id_log_out">Log out</string>
  <string name="id_make_sure_you_have_enabled_otg">Make sure you have enabled OTG option in Android Settings</string>
  <string name="id_migrate_another_wallet">Migrate Another Wallet</string>
  <string name="id_migrating_to_blockstream_green">Migrating to Blockstream Green? Have an existing Blockstream Green wallet you\'d like to import? Let\'s go!</string>
  <string name="id_more_info">More Info</string>
  <string name="id_no_device_connected">No device connected</string>
  <string name="id_node_info">Node Info</string>
  <string name="id_optional">Optional</string>
  <string name="id_private_but_less_stable">Private, but less stable connection</string>
  <string name="id_qr_code">QR Code</string>
  <string name="id_rate_your_experience">Rate your experience</string>
  <string name="id_recovery_phrase">Recovery Phrase</string>
  <string name="id_remove">Remove</string>
  <string name="id_remove_wallet">Remove wallet</string>
  <string name="id_rename_account">Rename account</string>
  <string name="id_rename_wallet">Rename wallet</string>
  <string name="id_request_amount">Request Amount</string>
  <string name="id_restore_a_wallet">Restore a Wallet</string>
  <string name="id_restore_green_wallet">Restore Green Wallet</string>
  <string name="id_save">Save</string>
  <string name="id_settings">Settings</string>
  <string name="id_show_recovery_phrase">Show Recovery Phrase</string>
  <string name="id_sweep_from_paper_wallet">Sweep From Paper Wallet</string>
  <string name="id_these_settings_apply_for_every">These settings apply for every wallet you use on Blockstream Green.</string>
</resources>