<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/help"
        android:title="@string/id_help"
        android:icon="@drawable/ic_question"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bip39_passphrase"
        android:icon="@drawable/ic_password"
        android:title="@string/id_bip39_passphrase_login" />

    <item
        android:id="@+id/show_recovery_phrase"
        android:icon="@drawable/ic_key"
        android:title="@string/id_show_recovery_phrase" />

    <item
        android:id="@+id/rename"
        android:icon="@drawable/ic_text_aa"
        android:title="@string/id_rename_wallet" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_trash"
        android:title="@string/id_remove_wallet" />

</menu>
