<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_description"
        android:title="@string/id_description"
        android:icon="@drawable/ic_note"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/help"
        android:title="@string/id_help"
        android:icon="@drawable/ic_question"
        app:showAsAction="always"/>

    <item
        android:id="@+id/request_amount"
        android:title="@string/id_request_amount"
        android:icon="@drawable/text_aa"
        app:showAsAction="never"/>

    <item
        android:id="@+id/list_of_addresses"
        android:title="@string/id_list_of_addresses"
        android:icon="@drawable/at"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sweep_from_paper_wallet"
        android:title="@string/id_sweep_from_paper_wallet"
        android:icon="@drawable/qr_code"
        app:showAsAction="never"/>
</menu>
