<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.blockstream.green.ui.settings.AppSettingsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <com.blockstream.green.views.GappedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            app:gap="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_app_settings"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/id_these_settings_apply_for_every"
                android:textAppearance="?attr/textAppearanceBody2" />

            <com.blockstream.green.views.GreenSwitch
                android:id="@+id/switchTor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={vm.enableTorRouting}"
                app:captionText="@string/id_private_but_less_stable"
                app:icon="@drawable/ic_tor_60"
                app:titleText="@string/id_connect_with_tor" />

            <com.blockstream.green.views.DividerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_element_margin" />

            <com.blockstream.green.views.GreenSwitch
                android:id="@+id/switchProxy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={vm.enableProxy}"
                app:icon="@drawable/ic_proxy_60"
                app:titleText="@string/id_connect_through_a_proxy" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/proxyLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                error="@{vm.proxyURLInvalid ? @string/id_host_ip : null}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_element_margin"
                android:layout_marginBottom="4dp"
                app:isVisible="@{vm.enableProxy}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/proxy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.proxyURL}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Green.Button.Text"
                    android:text="@string/id_cancel" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/id_save" />

            </LinearLayout>
        </com.blockstream.green.views.GappedLinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
